--- a/content/pages/rules/networks/247/index.adoc
+++ b/content/pages/rules/networks/247/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/247/
 :category: networks
-:description: This document contains the details of the security requirements related to the definition and management of networks in the organization. This requirement establishes the importance of hiding the SSID for private networks that manage sensitive information.
-:keywords: Wireless, Private Network, SSID, Hide, Security, Configuration
+:description: This requirement establishes the importance of hiding the SSID for private networks that manage sensitive information.
+:keywords: Wireless, Private Network, SSID, Hide, Security, Configuration, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R247. Hide SSID on private networks
@@ -9,4 +9,4 @@
 == Requirement
 
 The private networks must disable
-the disclosure of the +SSID+ (+Service Set Identifier+).
+the disclosure of the `SSID` (Service Set Identifier).
