--- a/content/pages/rules/authentication/227/index.adoc
+++ b/content/pages/rules/authentication/227/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/227/
 :category: authentication
-:description: This document details the security requirements and guidelines related to secure user authentication management in the organization. In this case it is recommended that the system display access notifications for unauthorized users when a login process is in progress.
-:keywords: Notification, User Account, Authentication, Access, ASVS, CWE
+:description: This requirement establishes the importance of the system displaying access notifications for unauthorized users when a login process is in progress.
+:keywords: Notification, User Account, Authentication, Access, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R227. Display access notification
