--- a/content/pages/rules/authentication/232/index.adoc
+++ b/content/pages/rules/authentication/232/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/232/
 :category: authentication
-:description: This document details the security requirements related to secure user authentication management. In this case, it is recommended that, when handling critical information, the identity of the equipment from which a user is being authenticated be required.
-:keywords: System, Information, Business, Identification, Equipment, Authentication
+:description: This requirement states that when handling critical information, the identity of the equipment from which a user is being authenticated must be required.
+:keywords: System, Information, Business, Identification, Equipment, Authentication, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R232. Require equipment identity
