--- a/content/pages/rules/authentication/233/index.adoc
+++ b/content/pages/rules/authentication/233/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/233/
 :category: authentication
-:description: This document details the security requirements and guidelines related to secure user authentication management. In this case, it is recommended that under no circumstances a system displays the access credentials, either on screen or on any other visible resource.
-:keywords: System, Display, Password, Screen, Resource, Credentials
+:description: This requirement states that under no circumstances should a system show the access credentials on screen or any other visible resource.
+:keywords: System, Display, Password, Screen, Resource, Credentials, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R233. Avoid displaying access credentials
