--- a/content/pages/rules/networks/248/index.adoc
+++ b/content/pages/rules/networks/248/index.adoc
@@ -1,12 +1,12 @@
 :slug: rules/248/
 :category: networks
-:description: This document contains the details of the security requirements related to the definition and management of networks in the organization. This requirement establishes the importance of avoiding dictionary or common words, when defining a wireless SSID.
-:keywords: SSID, Network, Security, Wireless, Dictionary, Words
+:description: This requirement establishes the importance of avoiding dictionary or common words when defining a wireless SSID.
+:keywords: SSID, Network, Security, Wireless, Dictionary, Words, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R248. SSID without dictionary words
 
 == Requirement
 
-The name of the wireless +SSID+
+The name of the wireless `SSID`
 must not contain dictionary words.
