--- a/content/pages/rules/out-of-scope/business/244/index.adoc
+++ b/content/pages/rules/out-of-scope/business/244/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/244/
 :category: business
-:description: This document contains the details of the security requirements related to the definition and management of business process in the organization. This requirement establishes the importance of defining and documenting procedures to manage information backup in case of security event.
-:keywords: Requirement, Security, Business Process, Information, Backup, Documentation
+:description: This requirement establishes the importance of defining and documenting procedures to manage information backup in case of a security event.
+:keywords: Requirement, Security, Business Process, Information, Backup, Documentation, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
