--- a/content/pages/rules/out-of-scope/development/240/index.adoc
+++ b/content/pages/rules/out-of-scope/development/240/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/240/
 :category: development
-:description: This document contains the details of the security requirements related to the definition and management of development process of the application. This requirement establishes the importance of performing security test over the source code to detect known vulnerabilities using automated tools.
-:keywords: Requirement, Security, Source Code, Automated Tools, Checks, Test
+:description: This requirement establishes the importance of performing security tests over the source code to detect known vulnerabilities using automated tools.
+:keywords: Requirement, Security, Source Code, Automated Tools, Checks, Test, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
