refac(doc): #3423.13 fix-descriptions-keywords
- Descriptions were shortened, and keywords were added on some pages.


Former-commit-id: baeb31201509c201ab74033169d4930acf9df7ea

--- a/content/pages/rules/architecture/263/index.adoc
+++ b/content/pages/rules/architecture/263/index.adoc
@@ -1,15 +1,15 @@
 :slug: rules/263/
 :category: architecture
-:description: This document details the security guidelines and requirements related to logical architecture management within the organization. This requirement establishes the importance of implementing protection mechanisms that shield the system against automated and robot attacks.
-:keywords: Protection, Mechanism, Robot, Attack, CWE, ASVS
+:description: This requirement establishes the importance of implementing protection mechanisms that shield the system against automated and robot attacks.
+:keywords: Protection, Mechanism, Robot, Attack, CWE, ASVS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R263. Establish mechanisms against robot attacks
 
 == Requirement
 
-The system must implement protection mechanisms against robots that index
-information, landings or resources.
+The system must implement protection mechanisms against robots
+that index information, landings or resources.
 
 == Description
 
