--- a/content/pages/rules/social/260/index.adoc
+++ b/content/pages/rules/social/260/index.adoc
@@ -1,12 +1,12 @@
 :slug: rules/260/
 :category: social
-:description: This document details the security requirements related to the proper use of social networks by the staff of a given organization or company. In this case, it is recommended to use email accounts other than the corporate ones to register accounts in social networks.
-:keywords: Organization, Email, Social Network, Account, Register, LinkedIn
+:description: This requirement establishes the importance of using email accounts other than the corporate ones to register accounts in social networks.
+:keywords: Organization, Email, Social Network, Account, Register, LinkedIn, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R260. Use alternative emails
 
 == Requirement
 
-The employes must not use corporate emails
+The employees must not use corporate emails
 to register accounts in social networks (even on +LinkedIn+).
