--- a/content/pages/rules/networks/249/index.adoc
+++ b/content/pages/rules/networks/249/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/249/
 :category: networks
-:description: This document contains the details of the security requirements related to the definition and management of networks in the organization. This requirement establishes the importance of properly locating the network access points to ensure the correct distribution of the wireless signal.
-:keywords: Network, SSID, Access point, Wireless, Location, Security.
+:description: This requirement establishes the importance of correctly locating the network access points to ensure the wireless signal's correct distribution.
+:keywords: Network, SSID, Access Point, Wireless, Location, Security, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R249. Locate access points
