--- a/content/pages/rules/networks/250/index.adoc
+++ b/content/pages/rules/networks/250/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/250/
 :category: networks
-:description: This document contains the details of the security requirements related to the definition and management of networks in the organization. This requirement establishes the importance of limiting the management of wireless access points to a unique physical port.
-:keywords: Wireless, Network, Access Point, Ports, Security, Management
+:description: This requirement establishes the importance of limiting the management of wireless access points to a unique physical port.
+:keywords: Wireless, Network, Access Point, Ports, Security, Management, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R250. Manage access points
