--- a/content/pages/rules/networks/253/index.adoc
+++ b/content/pages/rules/networks/253/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/253/
 :category: networks
-:description: This document contains the details of the security requirements related to the definition and management of networks in the organization. This requirement establishes the importance of restricting the network access only to authorized users using credentials and MAC addresses.
-:keywords: Private, Network, Credentials, Wireless, MAC, Address.
+:description: This requirement establishes the importance of restricting network access only to authorized users employing credentials and MAC addresses.
+:keywords: Private, Network, Credentials, Wireless, MAC, Address, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R253. Restrict network access
@@ -9,4 +9,4 @@
 == Requirement
 
 The access to private wireless networks must be restricted
-through user credentials and authorized +MAC+ addresses.
+through user credentials and authorized `MAC` addresses.
