--- a/content/pages/rules/networks/254/index.adoc
+++ b/content/pages/rules/networks/254/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/254/
 :category: networks
-:description: This document details the security guidelines and requirements related to the secure management of wireless networks in any organization or company. In this case, it is recommended that the factory default name of the wireless network SSID be changed.
-:keywords: Factory, SSID, Change, Wireless, Name, Organization
+:description: This requirement states that the factory default name of the wireless network SSID must be changed.
+:keywords: Factory, SSID, Change, Wireless, Name, Organization, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R254. Change SSID name
@@ -9,4 +9,4 @@
 == Requirement
 
 The organization must change
-the factory default name of the wireless network +SSID+.
+the factory default name of the wireless network `SSID`.
