--- a/content/pages/rules/networks/255/index.adoc
+++ b/content/pages/rules/networks/255/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/255/
 :category: networks
-:description: This document contains the details of the security requirements related to the definition and management of logical networks in the organization. This requirement establishes the importance of allowing access only to the necessary ports to avoid security breaches in the system.
-:keywords: Requirement, Security, Ports, Access, Restricted, Servers.
+:description: This requirement establishes the importance of allowing access only to the necessary ports to avoid security breaches.
+:keywords: Requirement, Security, Ports, Access, Restricted, Servers, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R255. Allow access only to the necessary ports
