--- a/content/pages/rules/networks/256/index.adoc
+++ b/content/pages/rules/networks/256/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/256/
 :category: networks
-:description: This document contains the details of the security requirements related to the definition and management of logical networks in the organization. This requirement establishes the importance of restricting server port access to avoid security breaches in the system.
-:keywords: Requirement, Security, Configuration, Servers, Ports, Networks
+:description: This requirement establishes the importance of restricting server ports access to avoid security breaches in the system.
+:keywords: Requirement, Security, Configuration, Servers, Ports, Networks, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R256. Restrict server ports access
