--- a/content/pages/rules/networks/257/index.adoc
+++ b/content/pages/rules/networks/257/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/257/
 :category: networks
-:description: This document contains the details of the security requirements related to the definition and management of logical networks in the organization. This requirement establishes the importance of defining an access model based on organizational user credentials.
-:keywords: Requirement, Security, Physical, Access, Network, Credentials
+:description: This requirement establishes the importance of defining an access model based on organizational user credentials.
+:keywords: Requirement, Security, Physical, Access, Network, Credentials, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R257. Access based on user credentials
