--- a/content/pages/rules/source/161/index.adoc
+++ b/content/pages/rules/source/161/index.adoc
@@ -77,14 +77,29 @@ more likely to contain security vulnerabilities.
 The code does not have a default case in a switch statement,
 which might lead to complex logical errors and resultant weaknesses.
 
-. [[r3]] link:https://standards.ieee.org/findstds/standard/1028-2008.html[IEEE: Standard for Software Reviews and Audits].
+. [[r4]] link:https://cwe.mitre.org/data/definitions/544.html[CWE-544: Missing Standardized Error Handling Mechanism].
+The software does not use a standardized method for handling errors throughout
+the code,
+which might introduce inconsistent error handling and resultant weaknesses.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://standards.ieee.org/findstds/standard/1028-2008.html[IEEE: Standard for Software Reviews and Audits].
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V4.1 General Access Control Design.(4.1.5)]
 Verify that access controls fail securely including when an exception occurs.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V6.2 Algorithms.(6.2.1)]
 Verify that all cryptographic modules fail securely,
 and errors are handled in a way that does not enable **Padding Oracle**
 attacks.
+
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V7.4 Error Handling.(7.4.2)]
+Verify that exception handling (or a functional equivalent) is used across the
+codebase to account for expected and unexpected error conditions.
+
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V7.4 Error Handling.(7.4.3)]
+Verify that a "last resort" error handler is defined which will catch all
+unhandled exceptions.
