--- a/content/blog/online-voting/index.adoc
+++ b/content/blog/online-voting/index.adoc
@@ -5,7 +5,7 @@
 :tags: security, cybersecurity, software, web, vulnerability, risk
 :image: cover.png
 :alt: Photo by visuals on Unsplash
-:description: The new presidential elections are approaching amid a pandemic. Here in this post, we show you how some academics exposed the vulnerabilities of one of the many online voting options (i.e., OmniBallot) and what recommendations they gave regarding its use.
+:description: In this post, we show you the exposed vulnerabilities of one of the many online voting options likely to be used in the upcoming presidential election.
 :keywords: Security, Cybersecurity, Software, Web, Vulnerability, Risk
 :author: Felipe Ruiz
 :writer: fruiz
@@ -27,10 +27,10 @@ questions arise on how to carry out the voting processes.
 Could it be somewhat more convenient
 and more secure to perform such processes over the Internet?
 
-A few days ago, the researchers Specter, of MIT,
-and Halderman, of the University of Michigan,
+A few days ago, the researchers Michael A. Specter, of MIT,
+and Alex Halderman, of the University of Michigan,
 link:https://internetpolicy.mit.edu/wp-content/uploads/2020/06/OmniBallot.pdf[published an article] that reports how an online election
-could be affected by attackers without detection.
+could be affected by undetected attackers.
 These authors made the first review
 explicitly focused on link:https://democracylive.com/omniballot-online/[Democracy Live's `OmniBallot`] platform
 used in different states on certain voting activities.
@@ -46,13 +46,13 @@ Current health risks have led some states to consider the Internet
 as a means of running the coming elections.
 Generally, the Internet has been used to allow specific vulnerable populations
 or those not present in the country to participate in elections.
-Tools such as the so-called `OmniBallot` have been used for these purposes.
+Tools such as `OmniBallot` have been used for these purposes.
 `OmniBallot` is a web-based platform
 that can serve for three modes of operations:
 blank ballot delivery, ballot marking, and _online voting_.
-Now, reportedly, it is going to be used for the first time
-by Delaware, West Virginia, and New Jersey with larger groups of voters,
-and on the riskier mode in relation to cyberattacks, the _online voting_.
+Now, reportedly, it is going to be used for _online voting_ for the first time
+in Delaware, West Virginia, and New Jersey with larger groups of voters.
+This is the riskiest mode in relation to cyberattacks.
 
 Let's clarify each `OmniBallot's` mode of operation:
 
@@ -88,9 +88,9 @@ of the `OmniBallot` architecture, they proposed the following:
 After having a clear understanding of the platform's architecture
 and client-server interactions, the authors analyzed the risks
 created when `OmniBallot` is used in each of the three modes mentioned above.
-Before we talk about it, let's state the possible attackers or adversaries:
+Before we talk about that, let's state the possible attackers or adversaries:
 
-First, there are some adversaries with access to the voter's device.
+First, adversaries may have access to the voter's device.
 These attackers could be system administrators, abusive partners,
 or remote attackers that control certain malware,
 and could modify `HTTP` or inject JavaScript
@@ -120,9 +120,9 @@ In a more difficult to detect manipulation, for instance,
 an attacker could even change bar codes to alter the records
 when tabulated by a scanner.
 On the other hand, there may be attacks not directed at the ballot itself
-but the ballot return instructions.
+but at the ballot return instructions.
 The attacker could make the ballot be sent to an inappropriate place,
-after knowing the voter's site that is between the data
+after knowing the voter's site that is among the data
 verified by OmniBallot at the start.
 Additionally, the attacker could mail a different ballot
 (following their preferences) to the appropriate place
@@ -132,8 +132,8 @@ employing the voter's data.
 the attacker could know the voter's selection before the ballot's generation,
 and from this, modify that particular ballot
 to suppress the vote for a specific candidate.
-Attacks may also cover the reordering of candidates
-and the swapping of the barcodes linked to each of them.
+Attacks may also involve reordering the candidates
+and swapping the barcodes linked to each of them.
 In these online marking cases,
 the attacker could also simply alter the voter’s marking
 and select a different candidate.
@@ -152,8 +152,9 @@ that their vote is correctly recorded and included in the election result."
 that what the voters gave as a selection
 is the same as what the officials received.
 Hence the possibility of the attacker changing the votes without being noticed.
-Finally, as a risk associated with all modes of operation,
-there is the collection and storage of privacy-sensitive data,
+
+Finally, a risk associated with all modes of operation
+is the collection and storage of privacy-sensitive data,
 including names, addresses, and dates.
 
 === Recommendations and conclusion
@@ -176,16 +177,12 @@ informing voters of the limitations on the use of their data
 by Democracy Live and third parties.
 The fact is that such data should only be used for the election process.
 
-The public examination of `OmniBallot`
-by two supposedly independent security experts
+The public security review of `OmniBallot` by security experts
 is something of high value when its use
 —due to a positive record in much smaller procedures—
 is under consideration for the next presidential election.
 In the end, they warn us that
 with such high risks of election outcomes being altered without detection,
 and without sufficient tools to mitigate those risks,
-it is best that at no time should the use of `OmniBallot`
-(or any similar voting platform)
-become an entirely online voting process.
-
-And maybe less so now that these results have been published.
+it is best that `OmniBallot's` (or any similar voting platform's)
+online ballot return doesn't become the default voting process.
