refac(doc): #3423.14 fix-descriptions-keywords
- Descriptions were shortened, and keywords were added on some pages.


Former-commit-id: 385b221915b7c2dd85fadfa58b5a3583d6e1b77d

--- a/content/pages/rules/architecture/266/index.adoc
+++ b/content/pages/rules/architecture/266/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/266/
 :category: architecture
-:description: This requirement establishes the importance of disabling or controlling system functions that could be harmful for the application.
-:keywords: Insecure, Functionality, System, Hardening, ASVS, CWE
+:description: This requirement establishes the importance of disabling or controlling system functions that could be harmful to the application.
+:keywords: Insecure, Functionality, System, Hardening, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R266. Disable insecure functionalities
