--- a/content/pages/rules/privacy/313/index.adoc
+++ b/content/pages/rules/privacy/313/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/313/
 :category: privacy
-:description: This document contains the details of the security requirements related to the management and protection of data privacy in the organization. This requirement establishes the importance of informing the user of the system's inability to individually identify them, whenever it can be demonstrated.
-:keywords: Requirement, Security, Data, GDPR, User Identification, Regulation
+:description: This requirement establishes the importance of informing the user of the system's inability to identify them whenever it can be demonstrated.
+:keywords: Requirement, Security, Data, GDPR, User Identification, Regulation, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R313. Inform inability to identify users
