--- a/content/pages/rules/out-of-scope/system/287/index.adoc
+++ b/content/pages/rules/out-of-scope/system/287/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/287/
 :category: system
-:description: This document contains the details of the security requirements related to the definition and management of resources in the organization. This requirement establishes the importance of generating alerts in systems when resources exceed a threshold value previously defined.
-:keywords: Requirement, Threshold, State, Security, Resources, Alert.
+:description: This requirement establishes the importance of generating alerts in systems when resources exceed a threshold value previously defined.
+:keywords: Requirement, Threshold, State, Security, Resources, Alert, Rules, Ethical Hacking, Pentesting
 :rules: yes
 :extended: yes
 
