--- a/content/pages/rules/privacy/310/index.adoc
+++ b/content/pages/rules/privacy/310/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/310/
 :category: privacy
-:description: This document contains the details of the security requirements related to the management and protection of data privacy in the organization. This requirement establishes the importance of requesting the user's consent whenever their data will be collected.
-:keywords: Requirement, Security, Data, GDPR, Consent Request, Regulation
+:description: This requirement establishes the importance of requesting the user's consent whenever their data is to be collected.
+:keywords: Requirement, Security, Data, GDPR, Consent Request, Regulation, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R310. Request user consent
