--- a/content/pages/rules/privacy/311/index.adoc
+++ b/content/pages/rules/privacy/311/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/311/
 :category: privacy
-:description: This document contains the details of the security requirements related to the management and protection of data privacy in the organization. This requirement focuses on the importance of establishing a mechanism to demonstrate that the user has granted consent.
-:keywords: Requirement, Security, Data, GDPR, Consent Demonstration, Regulation
+:description: This requirement focuses on the importance of establishing a mechanism to demonstrate that the user has granted consent for the collection of data.
+:keywords: Requirement, Security, Data, GDPR, Consent Demonstration, Regulation, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R311. Demonstrate user consent
