--- a/content/pages/rules/source/302/index.adoc
+++ b/content/pages/rules/source/302/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/302/
 :category: source
-:description: This document contains the details of the security requirements related to the definition and management of source code in the organization. This requirement establishes the importance of explicitly declaring all the dependencies used in the source code
-:keywords: Security, Files, Dependencies, Source Code, Libraries, CWE
+:description: This requirement establishes the importance of explicitly declaring all the dependencies used in the source code.
+:keywords: Security, Files, Dependencies, Source Code, Libraries, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R302. Declare dependencies explicitly
