--- a/content/pages/rules/system/284/index.adoc
+++ b/content/pages/rules/system/284/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/284/
 :category: system
-:description: This document contains the details of the security requirements related to the definition and management of systems in the organization. This requirement establishes the importance of defining a maximum number of connections per source IP in system ports.
-:keywords: Network, Port, Connection, IP, Security, Requirement
+:description: This requirement establishes the importance of defining a maximum number of connections per source IP in system ports.
+:keywords: Network, Port, Connection, IP, Security, Requirement, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R284. Define maximum number of connections
@@ -9,4 +9,4 @@
 == Requirement
 
 Each port must have a a maximum number of connections
-defined per source +IP+.
+defined per source `IP`.
